[package]
name = "wbpf"
description = "wBPF utilities"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Heyang Zhou <zhy20000919@hotmail.com>"]
repository = "https://github.com/losfair/wbpf-userspace"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
