[package]
name = "wbpf"
description = "wBPF utilities"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Heyang Zhou <zhy20000919@hotmail.com>"]
repository = "https://github.com/losfair/wbpf-userspace"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
log = "0.4"
memmap2 = "0.5.3"
nix = "0.23.1"
libc = "0.2"
goblin = "0.5.1"
prost = "0.10"
prost-types = "0.10"
byteorder = "1.4.3"
serde = { version = "1", features = ["derive"] }
bumpalo = "3.9.1"
indexmap = "1.8.1"
fnv = "1.0.7"
heapless = "0.7.10"
itertools = "0.10.3"
tokio = { version = "1", features = ["full"] }
petgraph = "0.6.0"

[build-dependencies]
prost-build = "0.10"
