[package]
name = "wbpfctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wbpf = { path = "../wbpf" }
anyhow = "1"
thiserror = "1"
structopt = "0.3.26"
log = "0.4"
pretty_env_logger = "0.4"
memmap2 = "0.5.3"
bumpalo = "3.9.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
